--- a/cte.html
+++ b/cte.html
@@ -387,20 +387,14 @@ Mr. Connolly teaches AP Computer Science and Advanced Topics in Computer Science
                 <div class="testimonials-single">
                     <img src="img/catapult.png" alt="client" class="client-img">
                     <blockquote class="blockquote">Students in Principles of Engineering were challenged to create a catapult by using simple materials such as plywood and duct tape.</blockquote>
-                    <h5 class="mt-4 mb-2">Catapult</h5>
-                    <h5 class="mt-4 mb-2"><b>Principles of Engineering</b></h5>
                 </div>
                 <div class="testimonials-single">
                     <img src="img/scratch.png" alt="client" class="client-img">
                     <blockquote class="blockquote">In Introduction to Computer Programming, students created many Scratch games to learn basic programming logic as well as game design. One of their final projects was a mock "Flappy Bird" game, complete with character animations and a background loop.</blockquote>
-                    <h5 class="mt-4 mb-2">Flappy Bird</h5>
-                    <h5 class="mt-4 mb-2"><b>Intro to Programming</b></h5>
                 </div>
                 <div class="testimonials-single">
                     <img src="img/chatbot.png" alt="client" class="client-img">
                     <blockquote class="blockquote">Students in the AP Computer Science classes created a chatbot that recognizes specific keywords and phrases said by the user to hold a conversation and even complete basic tasks for the user. </blockquote>
-                    <h5 class="mt-4 mb-2">Chatbot</h5>
-                    <h5 class="mt-4 mb-2"><b>AP Computer Science</b></h5>
                 </div>
             </div>
 
@@ -641,7 +635,7 @@ Mr. Connolly teaches AP Computer Science and Advanced Topics in Computer Science
                 document.getElementById('timeline-section-title').innerHTML = "Engineering Sequence";
 
                 document.getElementById('timeline-card-title1').innerHTML = "Principles of Engineering";
-                document.getElementById('timeline-card-p1').innerHTML = "It is the goal of this course to challenge and engage students through a broad range of engineering topics, including mechanical, structural and, electrical with a focus on the engineering design process, computer programming, design thinking, and problem solving. Students will be responsible for the development of advanced computational and robotic systems through the application of various computer program languages.";
+                document.getElementById('timeline-card-p1').innerHTML = "It is the goal of this course to challenge and engage students through a broad range of engineering topics, including mechanical, structural and, electrical with a focus on the engineering design process, computer programming, design thinking and problem solving. Students will be responsible for the development of advanced computational and robotic systems through the application of various computer program languages.";
                 document.getElementById('timeline-card-grade1').innerHTML = "Grade (9th-12th)";
 
                 document.getElementById('timeline-card-title2').innerHTML = "Graphic Engineering";
