--- a/design-brief.html
+++ b/design-brief.html
@@ -83,7 +83,7 @@
                                     <li class="nav-item"> <a class="nav-link" href="#safety">SAFETY</a> </li>
                                     <li class="nav-item"><a href="./cte.html#home" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">CTE</a></li>
                                     <li class="nav-item"><a href="./index.html" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">Chapter</a></li>
-                                    <li class="nav-item"><a href="./design-brief.html" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">About</a></li>
+                                    <li class="nav-item"><a href="./about.html" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">About</a></li>
                                 </ul>
                             </div>
                         </nav>
@@ -473,7 +473,7 @@
                             <p style="float: left;"><img src="https://image.freepik.com/free-icon/nut-icon_318-84971.jpg" height="20px" width="20px"  border="1px"></p>
                             <h4 class="mb-3"> &nbsp Teacher</h4>
                         </div>
-                        <p class="light-font mb-5">Want to learn a new topic? By collecting data from documents that users scan, A.I.D.A has developed a knowledge base of any topics pertaining to school as well as many life skills. A.I.D.A knows the best way to convey this information and will adapt to your learning style. </p>
+                        <p class="light-font mb-5">Want to learn a new topic? By collecting data from documents that users scan, A.I.D.A has developed a knowledge base of any topics pertaining to school as well as many life skills. A.I.D.A knows and will adapt to your learning style. </p>
                         <div>
                             <p style="float: left;"><img src="https://image.freepik.com/free-icon/nut-icon_318-84971.jpg" height="20px" width="20px"  border="1px"></p>
                             <h4 class="mb-3"> &nbsp Tutor</h4>
@@ -501,9 +501,9 @@
 
         </div>
 
-        <div class="section light2-bg" id="costs">
+        <div class="section" id="costs">
                 <div class="section-title">
-                    <h3>Our Pricing</h3>
+                    <h3 class = "text-white">Our Pricing</h3>
                 </div>
             <div class="container white-bg costscontainer">
                 <h1 class = "text-center webblue">$12/Month</h1>
@@ -530,7 +530,7 @@
                             <div class="single-feature text-center">
                                 <span class="lnr lnr-screen"></span>
                                 <h3>IBM Watson</h3>
-                                <p style="text-align:justify">IBM’s Watson technology uses natural language processing and deep learning, both of which are branches of machine learning, to extract metadata and sentiment from text.</p>
+                                <p style="text-align:center">IBM’s Watson technology uses natural language processing and deep learning, both of which are branches of machine learning, to extract metadata and sentiment from text.</p>
                                 <!-- Begin Modal -->
                                 <script>
                                     $('#watsonmodal').on('shown.bs.modal', function () {
@@ -581,7 +581,7 @@
                             <div class="single-feature text-center">
                                 <span class="lnr lnr-code"></span>
                                 <h3>Mobile A.I.</h3>
-                                <p style="text-align:justify">Personal assistants such as Siri, Cortana, and Google Assistant are accessible at our fingertips. They can set reminders, make calls, and answer questions to make every day life easier.</p>
+                                <p style="text-align:center">Personal assistants such as Siri, Cortana, and Google Assistant are accessible at our fingertips. They can set reminders, make calls, and answer questions to make every day life easier.</p>
                                 <!-- Begin Modal -->
                                 <script>
                                     $('#sirimodal').on('shown.bs.modal', function () {
@@ -632,7 +632,7 @@
                             <div class="single-feature text-center">
                                 <span class="lnr lnr-clock"></span>
                                 <h3>A.I.D.A</h3>
-                                <p style="text-align:justify">AIDA uses OCR technology to convert inputted documents into text and performs latent semantic analysis to understand the user's intent and generate questions accordingly.</p>
+                                <p style="text-align:center">AIDA uses OCR technology to convert inputted documents into text and performs latent semantic analysis to understand the user's intent and generate questions accordingly.</p>
                                 <!-- Begin Modal -->
                                 <script>
                                     $('#aidamodal').on('shown.bs.modal', function () {
