--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ Who We Are beginning
                         </p>
                         <p class = "text-white">Despite the lengthy process of getting the club approved in the school, the officers stayed persistent and were able to establish the club in school before the September of 2017. The club was founded with enough time to publicly introduce the club at the school club fair, where recruited 66 loyal members were recruited. The chapter is collectively participating in 19 competitive events for the first time at the NJ state conference this spring. </p>
                         <h3 class = "text-white">Creed</h3>
-                        <p class = "text-white"><b>I believe</b> in using technology to make the world a better place. <b>I believe</b> in collaborating with others to create beneficial solutions for the future. <b>I believe</b> that I should be dedicated to creating new technologies and educating others about technology. <b>I will strive</b> to better the world around us and to spread the influence of technology.</p>
+                        <p class = "text-white">I believe in using technology to <b>make the world a better place.</b> I believe in <b>collaborating with others</b> to create beneficial solutions for the future. I believe that I should be dedicated to creating new technologies and <b>educating others about technology.</b> I will strive to better the world around us and to <b>spread the influence of technology.</b></p>
                     </div>
                 </div>
             </div>
@@ -305,7 +305,7 @@ Who We Are beginning
                                 </p>
                                 <h4>Weekly After School Meetings</h4>
                                 <p> 
-                                    To keep all students in tact with their TSA event, the club runs weekly meetings to regroup the teams and update each other on any group progress. The club officers begin the meetings with recaps on competition dates, event updates, and general announcements. Throughout the meetings, students in each event regroup to share their personal progress on the project, as well as to collaborate on plans for the upcoming competitions.
+                                    To keep all students intact with their TSA event, the club runs weekly meetings to regroup the teams and update each other on any group progress. The club officers begin the meetings with recaps on competition dates, event updates, and general announcements. Throughout the meetings, students in each event regroup to share their personal progress on the project, as well as to collaborate on plans for the upcoming competitions.
                                 </p>
                                 <div>
                                         <img style="width:auto; height:350px"src="img/weeklymeetings1.JPG"/>
