--- a/cte.html
+++ b/cte.html
@@ -6,7 +6,6 @@
         <link rel="stylesheet" href="css/example.css">
         <link rel="stylesheet" href="css/carousel.css">
         <link rel = "stylesheet" href = "css/timeline.css">
-        <link rel="stylesheet" href="css/animsition.min.css">
 
         <style type="text/css">
             html, body {
@@ -74,9 +73,6 @@
 
 
     </head>
-
-    <div class="animsition">
-
     <body data-spy="scroll" data-target="#navbar" data-offset="30">
 
 
@@ -85,20 +81,18 @@
                 <div class="row">
                     <div class="col-md-12">
                         <nav class="navbar navbar-dark navbar-expand-lg">
-                            <a class="navbar-brand" href="index.html"><img src="" class="img-fluid" alt=""><b>W.W.P HSN</b></a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>               
-                                <div class="collapse navbar-collapse" id="navbar">
-                                    <ul class="navbar-nav ml-auto">
-                                        <li class="nav-item"> <a class="nav-link active" href="#home">HOME <span class="sr-only">(current)</span></a> </li>
-                                        <li class="nav-item"> <a class="nav-link" href="#features">CURRICULUM</a> </li>
-                                        <li class="nav-item"> <a class="nav-link" href="#staff">STAFF</a> </li>
-                                        <li class="nav-item"> <a class="nav-link" href="#student_projects">STUDENT PROJECTS</a> </li>
-                                        <li class="nav-item"><a href="./index.html" class="
-                                        animsition-link btn btn-outline-light my-3 my-sm-0 ml-lg-3">CHAPTER</a></li>
-                                        <li class="nav-item"><a href="./design-brief.html" class="animsition-link btn btn-outline-light my-3 my-sm-0 ml-lg-3">DESIGN BRIEF</a></li>
-                                        <li class="nav-item"><a href="./about.html" class="
-                                        animsition-link btn btn-outline-light my-3 my-sm-0 ml-lg-3">ABOUT</a></li>
-                                    </ul>
-                                </div>
+                            <a class="navbar-brand" href="index.html"><img src="" class="img-fluid" alt=""><b>W.W.P HSN</b></a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
+                            <div class="collapse navbar-collapse" id="navbar">
+                                <ul class="navbar-nav ml-auto">
+                                    <li class="nav-item"> <a class="nav-link active" href="#home">HOME <span class="sr-only">(current)</span></a> </li>
+                                    <li class="nav-item"> <a class="nav-link" href="#features">CURRICULUM</a> </li>
+                                    <li class="nav-item"> <a class="nav-link" href="#staff">STAFF</a> </li>
+                                    <li class="nav-item"> <a class="nav-link" href="#student_projects">STUDENT PROJECTS</a> </li>
+                                    <li class="nav-item"><a href="./index.html" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">CHAPTER</a></li>
+                                    <li class="nav-item"><a href="./design-brief.html" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">DESIGN BRIEF</a></li>
+                                    <li class="nav-item"><a href="./about.html" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">ABOUT</a></li>
+                                </ul>
+                            </div>
                         </nav>
                     </div>
                 </div>
@@ -781,33 +775,7 @@ Mr. Connolly teaches AP Computer Science and Advanced Topics in Computer Science
 
 
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-        <script src="js/animsition.min.js"></script>
 
-        <script>
-        $(document).ready(function() {
-            $(".animsition").animsition({
-                inClass: 'zoom-in',
-                outClass: 'zoom-out',
-                inDuration: 1500,
-                outDuration: 800,
-                linkElement: '.animsition-link',
-                loading: true,
-                loadingParentElement: 'body', 
-                loadingClass: 'animsition-loading',
-                loadingInner: '',
-                timeout: false,
-                timeoutCountdown: 5000,
-                onLoadEvent: true,
-                browser: [ 'animation-duration', '-webkit-animation-duration'],
-                overlay : false,
-                overlayClass : 'animsition-overlay-slide',
-                overlayParentElement : 'body',
-                transition: function(url){ window.location.href = url; }
-             });
-            });
-        </script>
 
     </body>
-    </div>
 </html>
