--- a/design-brief.html
+++ b/design-brief.html
@@ -141,7 +141,7 @@
         <script src="./js/sketch.js"></script>
         <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
         <script  src="./js/timeline.js"></script>
-        <script src="./js/jquery-3.2.1.min.js"></script>
+
         <script src="./js/bootstrap.bundle.min.js"></script>
         <!-- Plugins JS -->
         <script src="./js/owl.carousel.min.js"></script>
@@ -844,8 +844,8 @@
         <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.3/vue.min.js'></script>
 
         <script type ="text/javascript" src="js/competitions.js"> </script>
+        <script src="https://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
 
-        <script src="js/pricecalculator.js"></script>
 
         <script src='https://cdn.jsdelivr.net/vue/latest/vue.min.js'></script>
         <script src='js/botui.min.js'></script>
