--- a/design-brief.html
+++ b/design-brief.html
@@ -64,12 +64,6 @@
         <link href='https://fonts.googleapis.com/css?family=Droid+Serif|Open+Sans:400,700' rel='stylesheet' type='text/css'>
     </head>
     <body data-spy="scroll" data-target="#navbar" data-offset="30">
-        <script>
-            window.onload = function() {
-                document.getElementById("firstCard").focus();
-            };
-        </script>
-
         
 
         <div class="nav-menu fixed-top">
@@ -141,7 +135,7 @@
         <script src="./js/sketch.js"></script>
         <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
         <script  src="./js/timeline.js"></script>
-
+        <script src="./js/jquery-3.2.1.min.js"></script>
         <script src="./js/bootstrap.bundle.min.js"></script>
         <!-- Plugins JS -->
         <script src="./js/owl.carousel.min.js"></script>
@@ -846,6 +840,7 @@
         <script type ="text/javascript" src="js/competitions.js"> </script>
         <script src="https://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
 
+        <script src="js/pricecalculator.js"></script>
 
         <script src='https://cdn.jsdelivr.net/vue/latest/vue.min.js'></script>
         <script src='js/botui.min.js'></script>
