--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <link href='https://fonts.googleapis.com/css?family=Droid+Serif|Open+Sans:400,700' rel='stylesheet' type='text/css'>
         <link rel = "stylesheet" type = "text/css" href = "officers.css">
         <link rel="stylesheet" href="css/main.css">
-    </head>
-    <div class="animsition">
+    </head
+    <div class="animsition"> 
     <body data-spy="scroll" data-target="#navbar" data-offset="30">
         <div class="nav-menu fixed-top">
             <div class="container">
@@ -656,7 +656,6 @@ Who We Are beginning
                     </small>
         </footer>
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script src="js/animsition.min.js"></script>
 
         <script>
