--- a/design-brief.html
+++ b/design-brief.html
@@ -6,6 +6,14 @@
         <link rel="stylesheet" href="css/example.css">
         <link rel="stylesheet" href="css/carousel.css">
         <link rel="stylesheet" href="css/competitions2.css">
+        <link rel="stylesheet" href="css/slider.css">
+
+
+        <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -28,6 +36,7 @@
         </style>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+
 
         <link rel='stylesheet prefetch' href='css/botui.min.css'>
         <link rel='stylesheet prefetch' href='https://unpkg.com/botui/build/botui-theme-default.css'>
@@ -499,8 +508,22 @@
                 <div class="section-title">
                     <h3 class = "text-white">Our Pricing</h3>
                 </div>
-            <div class="container white-bg costscontainer">
-                <h1 class = "text-center webblue">$12/Month</h1>
+                <div class="container white-bg costscontainer">
+
+                
+                 
+                <output for="range" class="output"></output>
+                <br>
+                <br>
+                <br>
+
+                        <label for="range">
+                              <input type="range" name="range" id="range" min="0" max="300" step="5" value="175"/>
+                        </label>
+
+                        <br>
+                        <br>
+
                 <div class="row">
                     <div class="container">
                     <div class="col-xl-10 col-lg-12 mx-auto">
@@ -510,6 +533,10 @@
             </div>
             </div>
         </div>
+
+        <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+        <script  src="js/slider.js"></script>
+
         <div class="main-wrapper" id="technologies">
             <!-- Start Feature Area -->
 
@@ -643,7 +670,7 @@
                                         <div class="modal-dialog" role="document">
                                                 <div class="modal-content">
                                                   <div class="modal-header">
-                                                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                                    <h5 class="modal-title" id="exampleModalLabel">A.I.D.A</h5>
                                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">
                                                         X
                                                     </button>
