--- a/design-brief.html
+++ b/design-brief.html
@@ -6,7 +6,12 @@
         <link rel="stylesheet" href="css/example.css">
         <link rel="stylesheet" href="css/carousel.css">
         <link rel="stylesheet" href="css/competitions2.css">
-        <link rel="stylesheet" href="css/animsition.min.css">
+        <link rel="stylesheet" href="css/animsition.min.css">        
+        <link rel="stylesheet" href="css/slider.css">
+
+
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
        
