--- a/eventfinder.html
+++ b/eventfinder.html
@@ -11,12 +11,29 @@
 <link rel='stylesheet prefetch' href='https://cdn.rawgit.com/Eonasdan/bootstrap-datetimepicker/e8bddc60e73c1ec2475f827be36e1957af72e2ea/build/css/bootstrap-datetimepicker.css'>
 <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.42/css/bootstrap-datetimepicker.min.css'>
 
-      <link rel="stylesheet" href="css/eventfinderstyle.css">
+	  <link rel="stylesheet" href="css/eventfinderstyle.css">
+	  <link rel="stylesheet" href="css/style.css">
+
+
 
   
 </head>
 
 <body>
+
+		<div class="section bg-white" id="leap">
+					<div class="row">
+						<div class="col-xl-12 col-lg-12 mx-auto">
+							<h3 class="section3-title2" style="text-align:center">
+							   TSA Event Finder 
+							</h3>
+							<br>
+							<a href="index.html" style="display:block;margin:auto;margin-right:10%;margin-left:10%" class="btn btn-primary" >Back to Chapter Page</a>
+		
+	
+						</div>
+					</div>
+
 
   <div class="container">
 		<div class="col-sm-12">
@@ -28,13 +45,11 @@
 
 				<div class="mm-survey-results">
 					<div class="mm-survey-results-container">
-						<p class="mm-survey-results-score">Great job! Thanks for submitting a quote to WebDevlopr, you should be receiving an email soon.</p>
+						<p class="mm-survey-results-score">Here are your best event choices based on the preferences you selected! You can find more information on these events  <a href="http://tsaweb.org/sites/default/files/High%20School%20Competitive%20Events%20Overview.pdf"> <b>here.</b> </a></p>
 						<ul class="mm-survey-results-list"></ul>
 					</div>
 					<div class="mm-survey-results-controller">
-						<div class="mm-back-btn">
-							<button>Back</button>
-						</div>
+						
 					</div>
 				</div>
 
@@ -42,7 +57,7 @@
 					<div class="mm-survey-container"></div>
 					<div class="mm-survey-controller">
 						<div class="mm-prev-btn">
-							<button>Prev</button>
+							<button>Back</button>
 						</div>
 						<div class="mm-next-btn">
 							<button disabled="true">Next</button>
