--- a/index.html
+++ b/index.html
@@ -249,9 +249,15 @@ What is TSA beginning
                         </h3>
                         <p>TSA (Technology Student Association) is a national organization dedicated to helping students create a better future in the Mathematics and Technology fields. The organization uses its yearly set of competitions to test the abilities of the students competing in the event. In addition to expanding their knowledge, the members are able to represent their school and community when competing. </p>
                         <p>The TSA motto “Learning to lead in a technical world” is precisely what the organization is working towards, as the club has opened branches in 48 of the 50 states. The overall mission of TSA is to have the members of the club learn and develop their skills in the STEM department and to eventually implement them on solutions towards the world’s concerning international problems.</p>
-                        <pageWithAnimation>
+                       
+                        <h4 class="section-heading mb-4">
+                                TSA Events
+                            </h4>
+
+                            <p>TSA has more than 30 competitive events that range in topics covering science, technology, engineering, art, and math. </p>
+                            <p> To help students figure out what events are what best for them, the HSN TSA chapter has created an automated event suggestion tool! Click the button below to give a try. </p></p>
+
                         <a href="eventfinder.html" class="btn btn-primary">TSA Event Finder</a>
-                    </pageWithAnimation>
                     </div>           
                     </div>
                     
