--- a/design-brief.html
+++ b/design-brief.html
@@ -526,7 +526,7 @@
                 <div class="row">
                     <div class="container">
                     <div class="col-xl-10 col-lg-12 mx-auto">
-                        <p class = "text-center">We charge a flat monthly fee of $12 because we believe our users should be offered the same benefits for a low price. We want everyone to have the opportunity to learn and an affordable flat rate is the best way to do so. With this monthly payment, we can manage our costs and spread knowledge among our users.</p>
+                        <p class = "text-center">A.I.D.A will be available through a subscription service. If you are simply looking to give the software a try, the affordable one month acesss option is the best for you. If you decide to continue using the application, the long term subscriptions will save you money. All subscription options will give you access to all of AIDA's features and benefits! </p>
                     </div>
                     </div>
             </div>
