--- a/cte.html
+++ b/cte.html
@@ -2,11 +2,13 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>TSA</title>
+        <title>WWP HSN TSA</title>
         <link rel="stylesheet" href="css/example.css">
         <link rel="stylesheet" href="css/carousel.css">
         <link rel = "stylesheet" href = "css/timeline.css">
         <link rel="stylesheet" href="css/animsition.min.css">
+        <link rel="icon" href="img/icon.png">
+
 
         <style type="text/css">
             html, body {
