--- a/design-brief.html
+++ b/design-brief.html
@@ -2,12 +2,13 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>TSA</title>
+        <title>WWP HSN TSA</title>
         <link rel="stylesheet" href="css/example.css">
         <link rel="stylesheet" href="css/carousel.css">
         <link rel="stylesheet" href="css/competitions2.css">
         <link rel="stylesheet" href="css/animsition.min.css">        
         <link rel="stylesheet" href="css/slider.css">
+        <link rel="icon" href="img/icon.png">
 
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
