--- a/eventfinder.html
+++ b/eventfinder.html
@@ -3,9 +3,10 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Event Finder</title>
+  <title>WWP HSN TSA Event Finder</title>
   
-  
+  <link rel="icon" href="img/icon.png">
+
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
 <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Lato:400,100,300,700,900|Open+Sans:400,300,600,700,800|Raleway:400,100,200,300,500,600,700,800,900'>
 <link rel='stylesheet prefetch' href='https://cdn.rawgit.com/Eonasdan/bootstrap-datetimepicker/e8bddc60e73c1ec2475f827be36e1957af72e2ea/build/css/bootstrap-datetimepicker.css'>
