--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@ Who We Are beginning
                         <div class="container .nobg">
                             <div class="accordions__content rich-text" v-bind:class="{ 'accordions__content--expanded': isOpen('Experience') }"><p class = "text-white" >The NJ state conference is being held on April 14, 2018. It is held every spring at The College Of New Jersey. This year, students from New Jersey will compete in over 30 different events and the winners will proceed to the national TSA conference in Atlanta, Georgia. Despite being WWP High School North’s first year at competition, we are collectively participating in 19 events with a majority of members doing multiple events.
                                 <br>   
-                                <img width="auto" height="500px" src="img/stateconf.jpg_large"/>
+                                <img width="auto" height="auto" src="img/stateconf.jpg_large"/>
 
                             </p></div>
 
