--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 
 
         <link href='https://fonts.googleapis.com/css?family=Droid+Serif|Open+Sans:400,700' rel='stylesheet' type='text/css'>
-        <link rel = "stylesheet" type = "text/css" href = "officers.css">
+        <link rel = "stylesheet" type = "text/css" href = "css/officers.css">
         <link rel="stylesheet" href="css/main.css">
     </head>
     <div class="animsition">
