--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 
         <link href='https://fonts.googleapis.com/css?family=Droid+Serif|Open+Sans:400,700' rel='stylesheet' type='text/css'>
-        <link rel = "stylesheet" type = "text/css" href = "officers.css">
+        <link rel = "stylesheet" type = "text/css" href = "css/officers.css">
         <link rel="stylesheet" href="css/main.css">
     </head> 
     
