event not category

--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@ Who We Are beginning
             <table class = "col-lg-6 col-centered">
                 <thead>
                     <tr>
-                        <th>Category</th>
+                        <th>Event</th>
                         <th>Place</th>
                     </tr>
                 </thead>
