--- a/cte.html
+++ b/cte.html
@@ -379,6 +379,8 @@ Mr. Connolly teaches AP Computer Science and Advanced Topics in Computer Science
 </div>
 -->
             <div class = "section">
+                <h3 class = "text-white text-center"> Our Teachers</h3>
+                <br>
                 <div class="row active-with-click">
                     <div class="col-md-4 col-sm-6 col-xs-12">
                         <article class="material-card Red">
