--- a/cte.html
+++ b/cte.html
@@ -378,7 +378,7 @@ Mr. Connolly teaches AP Computer Science and Advanced Topics in Computer Science
 
 </div>
 -->
-            <div class = "section">
+            <div class = "section" id = "staff">
                 <h3 class = "text-white text-center"> Our Teachers</h3>
                 <br>
                 <div class="row active-with-click">
