student projects id

--- a/cte.html
+++ b/cte.html
@@ -454,7 +454,7 @@ Mr. Connolly teaches AP Computer Science and Advanced Topics in Computer Science
             <style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
             <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
             <script  src="js/tcards.js"></script>
-            <div class="section bg-white">
+            <div class="section bg-white" id = "student_projects">
                 <div class="container">
                     <div class="section-title">
                         <h3>Student Projects</h3>
