--- a/about.html
+++ b/about.html
@@ -596,15 +596,12 @@ OTHER DEALINGS IN THE SOFTWARE.
         <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.3/vue.min.js'></script>
         <script  src="js/competitions.js"></script>
         <footer class="my-5 text-center">
-                <small>
-                        <a href="" style="text-decoration:none" class="m-2">Webmaster Team 2201-1</a>
-                        <br> 
-                        <a href="" style="text-decoration:none" class="m-2">COPYRIGHT © 2018. West Windsor Plainsboro High School North TSA</a>
-                        <br>
-                        <a href="" style="text-decoration:none" class="m-2">2201007,  2201008,  2201019, 2201020, 2201030 </a>
-
-                    </small>
-        </footer>
+            <small>
+                    <a href="" style="text-decoration:none" class="m-2">Webmaster Chapter 5248</a>
+                    <br>
+                    <a href="" style="text-decoration:none" class="m-2">COPYRIGHT © 2018. West Windsor Plainsboro High School North TSA</a>
+                </small>
+    </footer>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script src="js/animsition.min.js"></script>
