--- a/cte.html
+++ b/cte.html
@@ -478,6 +478,16 @@ Mr. Connolly teaches AP Computer Science and Advanced Topics in Computer Science
                 </div>
 
             </div>
+
+            <footer class="my-5 text-center">
+                <small>
+                        <a href="" style="text-decoration:none" class="m-2">Webmaster Chapter 5248</a>
+                        <br>
+                        <a href="" style="text-decoration:none" class="m-2">COPYRIGHT © 2018. West Windsor Plainsboro High School North TSA</a>
+                    </small>
+        </footer>
+
+
             <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
             <script src='http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js'></script>
             <script src="./js/sketch.js"></script>
