--- a/index.html
+++ b/index.html
@@ -710,13 +710,11 @@ Who We Are beginning
     <script  src="js/competitions.js"></script>
     <footer class="my-5 text-center">
         <small>
-            <a href="" style="text-decoration:none" class="m-2">Webmaster Team 2201-1</a>
-            <br>
-            <a href="" style="text-decoration:none" class="m-2">COPYRIGHT © 2018. West Windsor Plainsboro High School North TSA</a>
-            <br>
-            <a href="" style="text-decoration:none" class="m-2">2201007,  2201008,  2201019, 2201020, 2201030 </a>
-        </small>
-    </footer>
+                <a href="" style="text-decoration:none" class="m-2">Webmaster Chapter 5248</a>
+                <br>
+                <a href="" style="text-decoration:none" class="m-2">COPYRIGHT © 2018. West Windsor Plainsboro High School North TSA</a>
+            </small>
+</footer>
 
     <script src="js/animsition.min.js"></script>
 
