--- a/design-brief.html
+++ b/design-brief.html
@@ -722,7 +722,7 @@
 
         <footer class="my-5 text-center">
                 <small>
-                        <a href="" style="text-decoration:none" class="m-2">Webmaster Chapter 5248</a>
+                        <a href="" style="text-decoration:none" class="m-2">Webmaster Chapter T5248</a>
                         <br>
                         <a href="" style="text-decoration:none" class="m-2">COPYRIGHT © 2018. West Windsor Plainsboro High School North TSA</a>
                     </small>
