--- a/cte.html
+++ b/cte.html
@@ -72,7 +72,7 @@
 
     </head>
 
-    <div class="animsition">
+    <div id="ani" class="animsition">
 
         <body data-spy="scroll" data-target="#navbar" data-offset="30">
 
@@ -89,10 +89,10 @@
                                         <li class="nav-item"> <a class="nav-link" href="#features">CURRICULUM</a> </li>
                                         <li class="nav-item"> <a class="nav-link" href="#staff">STAFF</a> </li>
                                         <li class="nav-item"> <a class="nav-link" href="#student_projects">STUDENT PROJECTS</a> </li>
-                                        <li class="nav-item"><a href="./index.html" class="
+                                        <li class="nav-item"><a id="chapter" href="./index.html" class="
                                             animsition-link btn btn-outline-light my-3 my-sm-0 ml-lg-3">CHAPTER</a></li>
-                                        <li class="nav-item"><a href="./design-brief.html" class="animsition-link btn btn-outline-light my-3 my-sm-0 ml-lg-3">DESIGN BRIEF</a></li>
-                                        <li class="nav-item"><a href="./about.html" class="
+                                        <li class="nav-item"><a id="design" href="./design-brief.html" class="animsition-link btn btn-outline-light my-3 my-sm-0 ml-lg-3">DESIGN BRIEF</a></li>
+                                        <li class="nav-item"><a id="about" href="./about.html" class="
                                             animsition-link btn btn-outline-light my-3 my-sm-0 ml-lg-3">ABOUT</a></li>
                                     </ul>
                                 </div>
@@ -246,7 +246,7 @@
             <section  id="cd-timeline" class="cd-container"> 
                 <div class="cd-timeline-block">
                     <div class="cd-timeline-img cd-picture">
-                        <img id = "timeline-card-img1" src="img/num1.png" alt="Picture"> 
+                        <img id = "timeline-card-img1" src="http://www.iconsplace.com/icons/preview/white/number-1-filled-256.png" alt="Picture"> 
 
                     </div> <!-- cd-timeline-img -->
 
@@ -258,7 +258,7 @@
                 </div>  <!-- cd-timeline-block -->
                 <div class="cd-timeline-block">
                     <div class="cd-timeline-img cd-movie">
-                        <img id = "timeline-card-img2" src="img/num2.png" alt="Movie">
+                        <img id = "timeline-card-img2" src="http://www.iconsplace.com/icons/preview/white/number-2-filled-256.png" alt="Movie">
                     </div> <!-- cd-timeline-img -->
 
                     <div class="cd-timeline-content">
@@ -269,7 +269,7 @@
                 </div> <!-- cd-timeline-block -->
                 <div class="cd-timeline-block">
                     <div class="cd-timeline-img cd-location">
-                        <img id = "timeline-card-img3" src="img/num3.png" alt="Picture">
+                        <img id = "timeline-card-img3" src="http://www.iconsplace.com/icons/preview/white/number-3-filled-256.png" alt="Picture">
                     </div> <!-- cd-timeline-img -->
 
                     <div class="cd-timeline-content">
@@ -280,7 +280,7 @@
                 </div> <!-- cd-timeline-block -->
                 <div class="cd-timeline-block" id = "timeline-block-4">
                     <div class="cd-timeline-img cd-picture">
-                        <img id = "timeline-card-img4" src="img/num4.png" alt="Location">
+                        <img id = "timeline-card-img4" src="http://www.iconsplace.com/icons/preview/white/number-4-filled-256.png" alt="Location">
                     </div> <!-- cd-timeline-img -->
 
                     <div class="cd-timeline-content">
@@ -478,16 +478,6 @@ Mr. Connolly teaches AP Computer Science and Advanced Topics in Computer Science
                 </div>
 
             </div>
-
-            <footer class="my-5 text-center">
-                <small>
-                        <a href="" style="text-decoration:none" class="m-2">Webmaster Chapter T5248</a>
-                        <br>
-                        <a href="" style="text-decoration:none" class="m-2">COPYRIGHT © 2018. West Windsor Plainsboro High School North TSA</a>
-                    </small>
-        </footer>
-
-
             <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
             <script src='http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js'></script>
             <script src="./js/sketch.js"></script>
@@ -837,27 +827,50 @@ Mr. Connolly teaches AP Computer Science and Advanced Topics in Computer Science
             <script src="js/animsition.min.js"></script>
 
             <script>
-                $(document).ready(function() {
-                    $(".animsition").animsition({
-                        inClass: 'zoom-in',
-                        outClass: 'zoom-out',
-                        inDuration: 1500,
-                        outDuration: 800,
-                        linkElement: '.animsition-link',
-                        loading: true,
-                        loadingParentElement: 'body', 
-                        loadingClass: 'animsition-loading',
-                        loadingInner: '',
-                        timeout: false,
-                        timeoutCountdown: 5000,
-                        onLoadEvent: true,
-                        browser: [ 'animation-duration', '-webkit-animation-duration'],
-                        overlay : false,
-                        overlayClass : 'animsition-overlay-slide',
-                        overlayParentElement : 'body',
-                        transition: function(url){ window.location.href = url; }
+                var isChrome = /Chrome/.test(navigator.userAgent) && /Google Inc/.test(navigator.vendor);
+
+                if(isChrome)
+                {
+                    $(document).ready(function() {
+                        $(".animsition").animsition({
+                            inClass: 'zoom-in',
+                            outClass: 'zoom-out',
+                            inDuration: 1500,
+                            outDuration: 800,
+                            linkElement: '.animsition-link',
+                            loading: true,
+                            loadingParentElement: 'body', 
+                            loadingClass: 'animsition-loading',
+                            loadingInner: '',
+                            timeout: false,
+                            timeoutCountdown: 5000,
+                            onLoadEvent: true,
+                            browser: [ 'animation-duration', '-webkit-animation-duration'],
+                            overlay : false,
+                            overlayClass : 'animsition-overlay-slide',
+                            overlayParentElement : 'body',
+                            transition: function(url){ window.location.href = url; }
+                        });
                     });
-                });
+                }
+                else
+                {
+                    var NAME = document.getElementById("ani");
+                    var currentClass = NAME.className;
+                    NAME.className = "";
+
+                    var NAME = document.getElementById("chapter");
+                    var currentClass = NAME.className;
+                    NAME.className = "btn btn-outline-light my-3 my-sm-0 ml-lg-3";
+            
+                    var NAME = document.getElementById("design");
+                    var currentClass = NAME.className;
+                    NAME.className = "btn btn-outline-light my-3 my-sm-0 ml-lg-3";
+
+                    var NAME = document.getElementById("about");
+                    var currentClass = NAME.className;
+                    NAME.className = "btn btn-outline-light my-3 my-sm-0 ml-lg-3";
+                }
             </script>
 
         </body>
